# routers/commentsRouter_controllers.go
@@ -36,6 +36,13 @@ func init() {
 
 	beego.GlobalControllerRouter["github.com/lenfree/awsLaCapa/controllers:IAMUsersController"] = append(beego.GlobalControllerRouter["github.com/lenfree/awsLaCapa/controllers:IAMUsersController"],
 		beego.ControllerComments{
+			Method: "GetServerCerts",
+			Router: `/server_certificates`,
+			AllowHTTPMethods: []string{"get"},
+			Params: nil})
+
+	beego.GlobalControllerRouter["github.com/lenfree/awsLaCapa/controllers:IAMUsersController"] = append(beego.GlobalControllerRouter["github.com/lenfree/awsLaCapa/controllers:IAMUsersController"],
+		beego.ControllerComments{
 			Method: "GetAll",
 			Router: `/users`,
 			AllowHTTPMethods: []string{"get"},
