# swagger/swagger.json
@@ -62,6 +62,22 @@
                 }
             }
         },
+        "/iam/server_certificates": {
+            "get": {
+                "tags": [
+                    "iam"
+                ],
+                "description": "Return all IAM Server Certificates",
+                "operationId": "IAMUsersController.GetServerCerts",
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/IAMServerCertificateMetadataList"
+                        }
+                    }
+                }
+            }
+        },
         "/iam/user_groups": {
             "get": {
                 "tags": [
@@ -253,7 +269,7 @@
                 "Values": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{570 0xc820722e10 false}"
+                        "$ref": "#/definitions/\u0026{570 0xc420264ff0 false}"
                     }
                 }
             }
@@ -284,7 +300,7 @@
                     "type": "string"
                 },
                 "Tags": {
-                    "$ref": "#/definitions/\u0026{894 0xc820680840 false}"
+                    "$ref": "#/definitions/\u0026{894 0xc4201c60c0 false}"
                 }
             }
         },
@@ -302,7 +318,7 @@
                 "BlockDeviceMappings": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{2635 0xc820a83470 false}"
+                        "$ref": "#/definitions/\u0026{2635 0xc42068a810 false}"
                     }
                 },
                 "ClientToken": {
@@ -312,13 +328,13 @@
                     "type": "boolean"
                 },
                 "EnaSupport": {
-                    "$ref": "#/definitions/\u0026{3251 0xc820a83500 false}"
+                    "$ref": "#/definitions/\u0026{3251 0xc42068a870 false}"
                 },
                 "Hypervisor": {
                     "type": "string"
                 },
                 "IamInstanceProfile": {
-                    "$ref": "#/definitions/\u0026{3369 0xc820a83560 false}"
+                    "$ref": "#/definitions/\u0026{3369 0xc42068a8a0 false}"
                 },
                 "ImageId": {
                     "type": "string"
@@ -327,13 +343,13 @@
                     "type": "string"
                 },
                 "InstanceLifecycle": {
-                    "$ref": "#/definitions/\u0026{3634 0xc820a835c0 false}"
+                    "$ref": "#/definitions/\u0026{3634 0xc42068a8d0 false}"
                 },
                 "InstanceType": {
                     "type": "string"
                 },
                 "KernelId": {
-                    "$ref": "#/definitions/\u0026{3759 0xc820a83620 false}"
+                    "$ref": "#/definitions/\u0026{3759 0xc42068a900 false}"
                 },
                 "KeyName": {
                     "type": "string"
@@ -342,19 +358,19 @@
                     "$ref": "#/definitions/\u0026{time Time}"
                 },
                 "Monitoring": {
-                    "$ref": "#/definitions/\u0026{3928 0xc820a83680 false}"
+                    "$ref": "#/definitions/\u0026{3928 0xc42068a930 false}"
                 },
                 "NetworkInterfaces": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{4039 0xc820a83920 false}"
+                        "$ref": "#/definitions/\u0026{4039 0xc42068aab0 false}"
                     }
                 },
                 "Placement": {
-                    "$ref": "#/definitions/\u0026{5811 0xc820a83a70 false}"
+                    "$ref": "#/definitions/\u0026{5811 0xc42068ab70 false}"
                 },
                 "Platform": {
-                    "$ref": "#/definitions/\u0026{6195 0xc820a83ad0 false}"
+                    "$ref": "#/definitions/\u0026{6195 0xc42068aba0 false}"
                 },
                 "PrivateDnsName": {
                     "type": "string"
@@ -365,17 +381,17 @@
                 "ProductCodes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{6376 0xc820a83b30 false}"
+                        "$ref": "#/definitions/\u0026{6376 0xc42068abd0 false}"
                     }
                 },
                 "PublicDnsName": {
                     "type": "string"
                 },
                 "PublicIpAddress": {
-                    "$ref": "#/definitions/\u0026{6626 0xc820a83bc0 false}"
+                    "$ref": "#/definitions/\u0026{6626 0xc42068ac30 false}"
                 },
                 "RamdiskId": {
-                    "$ref": "#/definitions/\u0026{6687 0xc820a83c20 false}"
+                    "$ref": "#/definitions/\u0026{6687 0xc42068ac60 false}"
                 },
                 "RootDeviceName": {
                     "type": "string"
@@ -386,23 +402,23 @@
                 "SecurityGroups": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{6864 0xc820a83c80 false}"
+                        "$ref": "#/definitions/\u0026{6864 0xc42068ac90 false}"
                     }
                 },
                 "SourceDestCheck": {
                     "type": "boolean"
                 },
                 "SpotInstanceRequestId": {
-                    "$ref": "#/definitions/\u0026{7106 0xc820a83d10 false}"
+                    "$ref": "#/definitions/\u0026{7106 0xc42068acf0 false}"
                 },
                 "SriovNetSupport": {
-                    "$ref": "#/definitions/\u0026{7179 0xc820a83d70 false}"
+                    "$ref": "#/definitions/\u0026{7179 0xc42068ad20 false}"
                 },
                 "State": {
-                    "$ref": "#/definitions/\u0026{7246 0xc820a83dd0 false}"
+                    "$ref": "#/definitions/\u0026{7246 0xc42068ad50 false}"
                 },
                 "StateReason": {
-                    "$ref": "#/definitions/\u0026{7394 0xc820a83e30 false}"
+                    "$ref": "#/definitions/\u0026{7394 0xc42068ad80 false}"
                 },
                 "StateTransitionReason": {
                     "type": "string"
@@ -413,7 +429,7 @@
                 "Tags": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{7592 0xc820a83e90 false}"
+                        "$ref": "#/definitions/\u0026{7592 0xc42068adb0 false}"
                     }
                 },
                 "VirtualizationType": {
@@ -429,7 +445,7 @@
             "type": "object",
             "properties": {
                 "Groups": {
-                    "$ref": "#/definitions/\u0026{7929 0xc820a4cc00 false}"
+                    "$ref": "#/definitions/\u0026{7929 0xc420640660 false}"
                 },
                 "Instances": {
                     "type": "array",
@@ -495,7 +511,25 @@
                     "type": "boolean"
                 },
                 "Marker": {
-                    "$ref": "#/definitions/\u0026{10218 0xc820779f80 false}"
+                    "$ref": "#/definitions/\u0026{10218 0xc4206f81e0 false}"
+                }
+            }
+        },
+        "IAMServerCertificateMetadataList": {
+            "title": "IAMServerCertificateMetadataList",
+            "type": "object",
+            "properties": {
+                "IsTruncated": {
+                    "type": "boolean"
+                },
+                "Marker": {
+                    "$ref": "#/definitions/\u0026{12356 0xc420789980 false}"
+                },
+                "ServerCertificateMetadataList": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ServerCertificateMetadata"
+                    }
                 }
             }
         },
@@ -534,7 +568,7 @@
                     "type": "boolean"
                 },
                 "Marker": {
-                    "$ref": "#/definitions/\u0026{14102 0xc82087cab0 false}"
+                    "$ref": "#/definitions/\u0026{16449 0xc420896150 false}"
                 },
                 "Users": {
                     "type": "array",
@@ -570,7 +604,7 @@
                     "type": "boolean"
                 },
                 "Marker": {
-                    "$ref": "#/definitions/\u0026{12244 0xc820959f20 false}"
+                    "$ref": "#/definitions/\u0026{14591 0xc420977350 false}"
                 }
             }
         },
@@ -594,7 +628,7 @@
                     "$ref": "#/definitions/\u0026{time Time}"
                 },
                 "Config": {
-                    "$ref": "#/definitions/\u0026{16581 0xc820200b10 false}"
+                    "$ref": "#/definitions/\u0026{18928 0xc42032f650 false}"
                 },
                 "Id": {
                     "type": "string"
@@ -619,18 +653,18 @@
                     "type": "string"
                 },
                 "NextRecordIdentifier": {
-                    "$ref": "#/definitions/\u0026{17462 0xc8202581e0 false}"
+                    "$ref": "#/definitions/\u0026{19809 0xc42038c090 false}"
                 },
                 "NextRecordName": {
-                    "$ref": "#/definitions/\u0026{17533 0xc820258240 false}"
+                    "$ref": "#/definitions/\u0026{19880 0xc42038c0c0 false}"
                 },
                 "NextRecordType": {
-                    "$ref": "#/definitions/\u0026{17598 0xc8202582a0 false}"
+                    "$ref": "#/definitions/\u0026{19945 0xc42038c0f0 false}"
                 },
                 "ResourceRecordSets": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{17665 0xc820258690 false}"
+                        "$ref": "#/definitions/\u0026{20012 0xc42038c300 false}"
                     }
                 }
             }
@@ -643,13 +677,13 @@
                     "type": "boolean"
                 },
                 "Marker": {
-                    "$ref": "#/definitions/\u0026{17104 0xc8201a37a0 false}"
+                    "$ref": "#/definitions/\u0026{19451 0xc4202e0e70 false}"
                 },
                 "MaxItems": {
                     "type": "string"
                 },
                 "NextMarker": {
-                    "$ref": "#/definitions/\u0026{17232 0xc8201a3800 false}"
+                    "$ref": "#/definitions/\u0026{19579 0xc4202e0ea0 false}"
                 },
                 "Route53_hosted_zones": {
                     "type": "array",
@@ -688,7 +722,7 @@
                     "type": "string"
                 },
                 "Tags": {
-                    "$ref": "#/definitions/\u0026{23709 0xc8203fc1b0 false}"
+                    "$ref": "#/definitions/\u0026{26056 0xc420a83620 false}"
                 },
                 "VpcId": {
                     "type": "string"
@@ -700,19 +734,19 @@
             "type": "object",
             "properties": {
                 "FromPort": {
-                    "$ref": "#/definitions/\u0026{23831 0xc8204356e0 false}"
+                    "$ref": "#/definitions/\u0026{26178 0xc420ad1f50 false}"
                 },
                 "IpProtocol": {
                     "type": "string"
                 },
                 "IpRanges": {
-                    "$ref": "#/definitions/\u0026{23924 0xc820435740 false}"
+                    "$ref": "#/definitions/\u0026{26271 0xc420ad1f80 false}"
                 },
                 "PrefixListIds": {
-                    "$ref": "#/definitions/\u0026{23976 0xc8204357a0 false}"
+                    "$ref": "#/definitions/\u0026{26323 0xc420ad1fb0 false}"
                 },
                 "ToPort": {
-                    "$ref": "#/definitions/\u0026{24026 0xc820435800 false}"
+                    "$ref": "#/definitions/\u0026{26373 0xc420ae8000 false}"
                 },
                 "UserIDGroupPairs": {
                     "type": "array",
@@ -727,7 +761,7 @@
             "type": "object",
             "properties": {
                 "FromPort": {
-                    "$ref": "#/definitions/\u0026{24203 0xc8204e82d0 false}"
+                    "$ref": "#/definitions/\u0026{26550 0xc420b7d2f0 false}"
                 },
                 "IpProtocol": {
                     "type": "string"
@@ -739,13 +773,13 @@
                     }
                 },
                 "PrefixListIds": {
-                    "$ref": "#/definitions/\u0026{24360 0xc8204e8360 false}"
+                    "$ref": "#/definitions/\u0026{26707 0xc420b7d350 false}"
                 },
                 "ToPort": {
-                    "$ref": "#/definitions/\u0026{24410 0xc8204e83c0 false}"
+                    "$ref": "#/definitions/\u0026{26757 0xc420b7d380 false}"
                 },
                 "UserIdGroupPairs": {
-                    "$ref": "#/definitions/\u0026{24463 0xc8204e8420 false}"
+                    "$ref": "#/definitions/\u0026{26810 0xc420b7d3b0 false}"
                 }
             }
         },
@@ -765,7 +799,7 @@
                 "UserIdGroupPairs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{24652 0xc820491290 false}"
+                        "$ref": "#/definitions/\u0026{26999 0xc420b36c90 false}"
                     }
                 }
             }
@@ -779,6 +813,30 @@
                     "items": {
                         "$ref": "#/definitions/SecurityGroup"
                     }
+                }
+            }
+        },
+        "ServerCertificateMetadata": {
+            "title": "ServerCertificateMetadata",
+            "type": "object",
+            "properties": {
+                "Arn": {
+                    "type": "string"
+                },
+                "Expiration": {
+                    "type": "string"
+                },
+                "Path": {
+                    "type": "string"
+                },
+                "ServerCertificateId": {
+                    "type": "string"
+                },
+                "ServerCertificateName": {
+                    "type": "string"
+                },
+                "UploadDate": {
+                    "type": "string"
                 }
             }
         },
@@ -804,7 +862,7 @@
                 "Tags": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/\u0026{26919 0xc8205d2ba0 false}"
+                        "$ref": "#/definitions/\u0026{29266 0xc420532e10 false}"
                     }
                 },
                 "VpcId": {
@@ -817,19 +875,19 @@
             "type": "object",
             "properties": {
                 "AccepterVpcInfo": {
-                    "$ref": "#/definitions/\u0026{27191 0xc82066d6e0 false}"
+                    "$ref": "#/definitions/\u0026{29538 0xc4205d6150 false}"
                 },
                 "ExpirationTime": {
-                    "$ref": "#/definitions/\u0026{27859 0xc82066d740 false}"
+                    "$ref": "#/definitions/\u0026{30206 0xc4205d6180 false}"
                 },
                 "RequesterVpcInfo": {
-                    "$ref": "#/definitions/\u0026{27920 0xc82066d800 false}"
+                    "$ref": "#/definitions/\u0026{30267 0xc4205d61e0 false}"
                 },
                 "Status": {
-                    "$ref": "#/definitions/\u0026{28227 0xc82066d860 false}"
+                    "$ref": "#/definitions/\u0026{30574 0xc4205d6210 false}"
                 },
                 "Tags": {
-                    "$ref": "#/definitions/\u0026{28386 0xc82066d8c0 false}"
+                    "$ref": "#/definitions/\u0026{30733 0xc4205d6240 false}"
                 },
                 "VpcPeeringConnectionId": {
                     "type": "string"
